<?php

namespace app\models;

use yii\db\ActiveRecord;

class TypeVehicule extends ActiveRecord
{
    public static function tableName()
    {
        return 'fredouil.typevehicule';
    }

}